<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:id="@+id/loginRoot"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout android:orientation="vertical" android:id="@+id/LinearLayout01"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_weight="1.0"
		android:background="@drawable/paper">
        <View
          android:layout_width="match_parent"
          android:layout_height="40dp"/>
		<RelativeLayout
		    android:id="@+id/RelativeLayout02"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="15.0px"
		    android:layout_marginRight="15.0px"
		    android:layout_marginTop="80.0px"
		    android:background="@drawable/login_back"
		    android:paddingBottom="10.0px"
		    android:paddingTop="21.0px" >

		    <ImageView
		        android:id="@+id/faceImg"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/login_head" />

		    <EditText
		        android:id="@+id/login_edit_account"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
		        android:layout_marginBottom="5.0px"
		        android:layout_marginLeft="5.0dip"
		        android:layout_marginRight="5.0dip"
		        android:layout_marginTop="5.0dip"
		        android:layout_toRightOf="@+id/faceImg"
		        android:background="@drawable/qq_edit_login"
		        android:hint="@string/strInputAccHint"
		        android:inputType="number"
		        android:maxLength="10"
		        android:paddingLeft="45.0sp"
		        android:saveEnabled="true" >

		        <requestFocus />
		    </EditText>

		    <TextView
		        android:id="@+id/TextView01"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBottom="@+id/login_edit_account"
		        android:layout_alignLeft="@+id/login_edit_account"
		        android:layout_alignTop="@+id/login_edit_account"
		        android:layout_marginRight="15.0sp"
		        android:gravity="center_vertical"
		        android:paddingLeft="7.0sp"
		        android:text="@string/strAccInputLabel"
		        android:textColor="#ff3f3f3f"
		        android:textSize="16.0dip" />

		    <ImageButton
		        android:id="@+id/ImageButton02"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBottom="@+id/login_edit_account"
		        android:layout_alignRight="@+id/login_edit_account"
		        android:layout_alignTop="@+id/login_edit_account"
		        android:layout_marginRight="1.0dip"
		        android:background="@drawable/more_select" />

		    <EditText
		        android:id="@+id/login_edit_pwd"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/login_edit_account"
		        android:layout_alignRight="@+id/login_edit_account"
		        android:layout_below="@+id/login_edit_account"
		        android:layout_marginRight="1.0dip"
		        android:background="@drawable/qq_edit_login"
		        android:inputType="textPassword"
		        android:maxLength="16"
		        android:paddingLeft="45.0sp"
		        android:saveEnabled="true" />

		    <TextView
		        android:id="@+id/TextView02"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBottom="@+id/login_edit_pwd"
		        android:layout_alignRight="@+id/TextView01"
		        android:layout_alignTop="@+id/login_edit_pwd"
		        android:gravity="center_vertical"
		        android:paddingLeft="7.0sp"
		        android:text="@string/strPswInputLabel"
		        android:textColor="#ff3f3f3f"
		        android:textSize="16.0dip" />

		    <CheckBox
		        android:id="@+id/login_cb_savepwd"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/login_btn_login"
		        android:button="@drawable/qq_btn_check"
		        android:checked="true"
		        android:paddingLeft="25.0px"
		        android:text="@string/opt_remember"
		        android:textColor="#ff222222"
		        android:textSize="16.0sp" />

		    <Button
		        android:id="@+id/login_btn_login"
		        android:layout_width="130.0px"
		        android:layout_height="40dp"
		        android:layout_alignRight="@+id/login_edit_pwd"
		        android:layout_below="@+id/faceImg"
		        android:layout_toRightOf="@+id/TextView01"
		        android:text="@string/login" />

		</RelativeLayout>

		<TableLayout android:id="@+id/TableLayout01"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_marginLeft="20.0px" android:layout_marginRight="20.0px"
			android:stretchColumns="1">
		    
		</TableLayout>
        <View
	        android:layout_width="match_parent"
	        android:layout_height="30dp"/>
		<Button
		    android:id="@+id/btn_register"
		    android:layout_width="fill_parent"
		    android:layout_height="70dp"
		    android:text="注册或绑定手机号"
		    android:textColor="#464646"
		    android:textSize="20sp" />

	</LinearLayout>
	<RelativeLayout android:id="@+id/RelativeLayout01"
		android:background="@drawable/bottom" android:layout_width="fill_parent"
		android:layout_height="44.0dip">
		<ImageButton android:id="@+id/login_option"
			android:background="@drawable/option" android:clickable="true"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginLeft="13.0dip" android:layout_marginTop="2.0dip"
			android:layout_centerVertical="true" />
	</RelativeLayout>
</LinearLayout>